--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nutrition_diary",
+  "name": "hue_rose",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,13 +10,22 @@
     "@types/node": "^12.19.11",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
+    "formik": "^2.2.6",
+    "hsluv": "^0.1.0",
+    "immutable": "^4.0.0-rc.12",
+    "nanoid": "^3.1.20",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
+    "sass": "^1.32.0",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
-  "homepage": "nutrition_diary",
+  "homepage": "hue_rose",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -40,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/chart.js": "^2.9.31"
   }
 }
