deploy: 33362581c36d150a1315da98dd1c1544511ad42f

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Hue Radar",
-  "name": "Hue Radar",
+  "short_name": "Hue Rose",
+  "name": "Hue Rose",
   "icons": [
     {
       "src": "favicon.ico",
