--- a/package.json
+++ b/package.json
@@ -3,31 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.11",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "bootstrap": "^4.5.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^12.20.7",
+    "@types/react": "^16.14.5",
+    "@types/react-dom": "^16.9.12",
+    "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
+    "comlink": "^4.3.0",
     "formik": "^2.2.6",
     "hsluv": "^0.1.0",
     "immutable": "^4.0.0-rc.12",
-    "nanoid": "^3.1.20",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.1",
-    "sass": "^1.32.0",
-    "typescript": "^4.1.3",
+    "nanoid": "^3.1.22",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
+    "sass": "^1.32.8",
+    "typescript": "^4.2.4",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.8"
+    "worker-loader": "^3.0.8",
+    "yup": "^0.32.9"
   },
   "homepage": "hue_rose",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -51,6 +53,6 @@
     ]
   },
   "devDependencies": {
-    "@types/chart.js": "^2.9.31"
+    "@types/chart.js": "^2.9.32"
   }
 }
