--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 package-lock.json filter=lfs diff=lfs merge=lfs -text
+docs/apljungquist.github.io_hue_rose_.png filter=lfs diff=lfs merge=lfs -text
